Bug 564351 - e10s: fix XMLHttpRequests in xpcshell. r=bent